Sat Oct 6 17:53:47 2007 - Andras Mantia <amantia@kde.org>
	o make multiplying work correctly for floating point values
	o do not remove the whole text after undoing the changes in the editor [#147817]
	o don't crash if opening a file the second time when the first try failed [#141110]
	o don't close the dialogs with ESC (just like in real applications)

Thu Sep 14 20:01:18 2006 - Michal Rudolf <mrudolf@kdewebdev.org>
(actually imported from a work branch on Sep 29, 2007 by Andras Mantia <amantia@kde.org>)
	o function str_findrev works now
	o fix crash when diving by zero
  o make function names case insensitive
  o fix dcop() function (external DCOP) in new parser
	o add missing EOLs to array_values()
  o don't open files with no filename given
  o fix crash on incorrect syntax in new parser
  o fix input_file() function
  o add switch/case to new parser
  o fix importing tables with empty cells
  o Kommander 1.3.0 (development branch) released

Thu Sep 7 20:01:18 2006 - Andras Mantia <amantia@kde.org>
  o fix crash on exit in the editor

Tue Sep 5 16:19:40 2006 - Andras Mantia <amantia@kde.org>
  o use KTextEditor for the associated text editing

Sun 16 sty 2005 00:44:39 CET - Michal Rudolf <mrudolf@kdewebdev.org>
	o add MessageLog to view output of dialogs run from Editor
	o add @debug command

Tue 11 sty 2005 23:00:00 CET - Michal Rudolf <mrudolf@kdewebdev.org>
	o update and unify version number
	o Kommander 1.1dev3 released

Sun 09 Jan 2005 15:22:05 CET - Michal Rudolf <mrudolf@kdewebdev.org>
	o added support for Kommander dialog templates in Editor

Tue 04 Jan 2004 14:30:00 CET - Michal Rudolf <mrudolf@kdewebdev.org>
	o implemented "Save All" files menu command
	o implemented SingleShot option of Timer widget

Thu 30 Dec 2004 14:00:32 CET - Michal Rudolf <mrudolf@kdewebdev.org>
	o added setColumnCaption for TreeWidget

Wed 29 Dec 2004 09:58:00 CET - Michal Rudolf <mrudolf@kdewebdev.org>
	o added some new function for Table widget: removeRow,