@@ -3,6 +3,7 @@ Sat Oct 6 17:53:47 2007 - Andras Mantia <amantia@kde.org>
 	o do not remove the whole text after undoing the changes in the editor [#147817]
 	o don't crash if opening a file the second time when the first try failed [#141110]
 	o don't close the dialogs with ESC (just like in real applications)
+	o fix ExecButton.setEnabled() [#113624]
 
 Thu Sep 14 20:01:18 2006 - Michal Rudolf <mrudolf@kdewebdev.org>
 (actually imported from a work branch on Sep 29, 2007 by Andras Mantia <amantia@kde.org>)
